Tue Apr  7 18:56:09 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* Makefile.PL (check_syslog): Revamp error message and return
 	false if it bombed.

Mon Apr  6 00:00:13 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Config.pm (_compile_rule): Allow the special
 	class-defined taboo and admin variables.

	* lib/Mj/Resend.pm (post): Deal with classes properly.

	* lib/Mj/Config.pm (parse_taboo_body): We were wiping out the
 	strings passed to us, causing the stored config file to lose
 	extended settings.
	(parse_taboo_headers): Ditto.

	* lib/Mj/Resend.pm (_check_taboo): Deal with classes.
	(_r_ck_taboo): Ditto.

	* lib/Mj/Config.pm (parse_taboo_body): Parse and incorporate
 	additional class argument.
	(parse_taboo_headers): Ditto.

	* postinstall: Place all temporary files in $config->{wtmpdir}
 	just in case root can't write to the build directory.

	* lib/Mj/FileSpace.pm (put): Add functionality to just create a
 	file; pass back the pathname upon success so it can be manipulated
 	elsewhere.

	* lib/Majordomo.pm (connect): Append to the session and keep it
 	open.

	* lib/Mj/Inform.pm (inform): Also log to the session.

	* postinstall (copy_file): New function.  Call copy_file to put
 	mj_confirm in the proper place if cgi_bin is set in the startup
 	configuration.

	* Makefile.PL (configure): Add questions about cgi_bin directory.

Sun Apr  5 23:59:55 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* bin/mj_shell: Removed now spurious reference to TMPDIR.

Fri Apr  3 01:26:48 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* bin/mj_shell (parse_command): Use WTMPDIR for user-owner
 	temporaries.

	* Makefile.PL (configure): Query for wtmpdir.

	* installbin: Expand WTMPDIR.

Thu Apr  2 20:18:13 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* postinstall (create_dirs): Create sessions directory so that we
 	can run mj_shell (to create the sessions directory).
